# atl

./: .depends  ATLConfig.cmake.in  CMakeLists.txt  CTestCustom.cmake.in  CTestCustom.ctest.in  Makefile.am  Makefile.in  acconfig.h  acinclude.m4  aclocal.m4  assert.h  atl-config.cmake.in  atl.h  atl.vcproj  atlConfig.cmake.in  atlConfigVersion.cmake.in  atom.c  atom_check.c  atom_formats.c  atom_formats.h  atom_internal.h  atom_server.c  atom_test.c  attr.c  attr_dump.c  attr_test.c  config.h.cmake  config.h.in  config.win  configure  configure.ac  configure.in  gen_info.c  lookup3.c  mkinstalldirs  tclHash.c  tclHash.h  unix_defs.h  version.c
.github/workflows/: build-and-test.yml  triggers.yml
cmake/: FindCERCSProject.cmake
config/: cercs.m4  config.sub  mkinstalldirs
kernel/: env.c  katl.c  katl.h  kernel_defs.h  library.h  undefined_syms
scripts/ci/cmake/: centos7-gcc.cmake  centos8-intel.cmake  macos-clang.cmake  ubuntu1804-inteloneapi.cmake  ubuntu2004-nvhpc.cmake  unix-common.cmake  windows-vs2019-clang.cmake  windows-vs2019-msvc.cmake
scripts/ci/gh-actions/: run.sh
scripts/ci/setup/: centos7-clang.sh  centos7-gcc.sh  centos7-pgi.sh  centos7.sh  centos8-clang.sh  centos8-gcc.sh  centos8-intel.sh  centos8.sh  linux-cmake.sh  ubuntu.sh  ubuntu1604-gcc.sh  ubuntu1804-clang.sh  ubuntu1804-intel.sh  ubuntu2004-clang.sh  ubuntu2004-gcc.sh
scripts/dashboard/: atl_common.cmake
